--- a/WebAPI/EmailTemplates/Referral Template.html
+++ b/WebAPI/EmailTemplates/Referral Template.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
     <!-- NAME: 1 COLUMN -->
@@ -710,9 +710,9 @@
                                                             <td class="mcnTextContent" valign="top" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
                                                                 <strong>Micro CPH, Copenhagen, May 14-15, 2018</strong><br>
-                                                                Hi <span style="-webkit-text-stroke-width: 0px;background-color: #FFFFFF;color: #333333;cursor: text;display: inline !important;float: none;font-family: sans-serif,arial,verdana,trebuchet ms;font-size: 13px;font-style: normal;font-variant: normal;font-weight: 400;letter-spacing: normal;line-height: 1.6;orphans: 2;text-align: left;text-decoration: none;text-indent: 0px;text-transform: none;white-space: normal;word-spacing: 0px;">{firstName}</span>,<br>
+                                                                Hi <span style="-webkit-text-stroke-width: 0px;background-color: #FFFFFF;color: #333333;cursor: text;display: inline !important;float: none;font-family: sans-serif,arial,verdana,trebuchet ms;font-size: 13px;font-style: normal;font-variant: normal;font-weight: 400;letter-spacing: normal;line-height: 1.6;orphans: 2;text-align: left;text-decoration: none;text-indent: 0px;text-transform: none;white-space: normal;word-spacing: 0px;">*|firstName|*</span>,<br>
                                                                 <br>
-                                                                Thanks for signing up for the <a href="https://microcph.dk" target="_blank">MicroCPH</a> conference, we appreciate your support for our community event. We would like your friends to join too, so please share this link with referral code {directDiscountLink}, then we will reward your friends with a 10% discount and an exclusive MicroCPH beer from a local microbrewery, exclusively for MicroCPH attendees. We will of cause reward you as well with the same exclusive MicroCPH beer for each signed up attendee that uses your referral code.<br>
+                                                                Thanks for signing up for the <a href="https://microcph.dk" target="_blank">MicroCPH</a> conference, we appreciate your support for our community event. We would like your friends to join too, so please share this link with referral code *|directDiscountLink|*, then we will reward your friends with a 10% discount and an exclusive MicroCPH beer from a local microbrewery, exclusively for MicroCPH attendees. We will of cause reward you as well with the same exclusive MicroCPH beer for each signed up attendee that uses your referral code.<br>
                                                                 <br>
                                                                 Please use #microcph when using social media.<br>
                                                                 <br>
